--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.7.1",
   },
   "scripts": {
     "start": "react-scripts start",
