--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "express": "^4.18.2",
-    "mongoose": "^8.7.1",
+    "mongoose": "^8.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
