--- a/package.json
+++ b/package.json
@@ -18,7 +18,18 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "express": "^4.18.2",
-    "mongoose": "^8.7.1"
+    "mongoose": "^8.7.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
+    "express": "^4.21.1",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "scripts": {
     "start": "react-scripts start",
