--- a/package.json
+++ b/package.json
@@ -5,31 +5,29 @@
   "dependencies": {
     "@types/react-select": "^5.0.1",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "csv-parser": "^3.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
+    "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "mongoose": "^8.7.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.8.0",
-    "express": "^4.18.2",
-    "mongoose": "^8.7.1",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "csv-parser": "^3.0.0",
-    "dotenv": "^16.4.5",
-    "exceljs": "^4.4.0",
-    "express": "^4.21.1",
-    "helmet": "^8.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "react-select": "^5.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
