--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGODB_URI=mongodb+srv://fullstack:cimbom2626@cluster0.vjxrqkg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://fullstack:cimbom2626@cluster0.vjxrqkg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=verySecretValue123!
